[gd_scene load_steps=4 format=2]

[ext_resource path="res://buildings/fruit_bat_cave/FruitBatCave.gd" type="Script" id=1]
[ext_resource path="res://buildings/fruit_bat_cave/fruit_bat_cave.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="FruitBatCave" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Cave" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 0, 18.1354 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
